# simpleRenderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
include/: Display.hpp  Mesh.hpp  Render.hpp  stb_image.h
res/shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  Camera.cpp  Display.cpp  Input.cpp  Mesh.cpp  Render.cpp  Shader.cpp  Texture.cpp  Util.cpp  main.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  Display.cpp  Display.hpp  Mesh.cpp  Mesh.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  render.cpp  render.hpp
src/input/: CMakeLists.txt  Input.cpp  Input.hpp  input.cpp  input.hpp
src/util/: CMakeLists.txt  Util.cpp  Util.hpp  util.cpp  util.hpp
